--- a/client/src/components/Recipes.css
+++ b/client/src/components/Recipes.css
@@ -1,101 +1,86 @@
+.recipesBar{
+    height: 50px;
+    flex-direction: row;
+    text-align: center;
+    justify-content: center;
+}
+
+.search{
+    height: 100%;
+}
+
 .recipesScreen{
     width: 100%;
-    height: 900px;
+    height: 1000px;
     display: flex;
     flex-direction: row;
 }
 
 .flechas{
     display: inline-block;
-    background-color: black;
+    background-color: #c56600cb;
     height: 100%;
-    width: 5%;
+    width: 4%;
+    color: #3b1f01;
+    text-align: center;
+}
+
+.divFlechas{
+    width:100%;
+    min-height:90%;
+    text-align:center;
+    display:table;
+}
+
+.f{
+    margin:0;
+    padding:0;
+    vertical-align:middle;
+    display:table-cell;
 }
 
 .flechas:hover{
-    background-color: blue;
+    background-color: #3b1f01;
 }
 
 .recipes{
     display: inline-block;
-    height: 100%;
+    background-color:white;
     width: 80%;
-    background-color:#5c30009d;
 }
-
 
 .filter{
     display: inline-block;
     height: 100%;
-    width: 10%;
-}
-
-.checks{
-    height: 80%;
-    background-color: #5c3000e7;
+    width: 12%;
 }
 
 .order{
     background-color: #5c3000e7;
-    height: 20%;
+    height: 15%;
 }
+
+.checks{
+    height: 85%;
+    background-color: #5c3000e7;
+}
+
+.dietChecks{
+    height: 40%;
+}
+
+.dishChecks{
+    height: 60%;
+}
+
 
 .matrix{
     display: grid;
-    height: 100%;
-    width: 100%;
-    grid-auto-rows: 300px;
-}
-.column0{
-    background-color: red;
-    grid-column: 1 / 3;
-    grid-row: 1/3;
+    grid-template-rows: 333px 333px 333px;
+    grid-template-columns: 33.3% 33.3% 33.3%;
 }
 
-.column1{
-    background-color: black;
-    grid-column: 2/3;
-    grid-row: 1/3;
-}
 
-.column2{
-    background-color: blue;
-    grid-column: 3/3;
-    grid-row: 1/3;
-}
-
-.column3{
-    background-color: red;
-    grid-column: 1/3;
-    grid-row: 2/3;
-}
-
-.column4{
-    background-color: black;
-    grid-column: 2/3;
-    grid-row: 2/3;
-}
-
-.column5{
-    background-color: blue;
-    grid-column: 3/3;
-    grid-row: 2/3;
-}
-
-.column3{
-    background-color: red;
-    grid-column: 1/3;
-    grid-row: 3/3;
-}
-
-.column4{
-    background-color: black;
-    grid-column: 2/3;
-    grid-row: 3/3;
-}
-
-.column5{
-    background-color: blue;
-    grid-column: 3/3;
-    grid-row: 3/3;
+.errorPage{
+    background-color: white;
 }
